cabal-version:      >=1.10
name:               Z-CBOR
version:            0.0.1.0
synopsis:           CBOR
description:        CBOR binary serialization format.
license:            BSD3
license-file:       LICENSE
author:             HanFei
maintainer:         s-labs
copyright:          (c) HanFei, 2020
category:           Data
build-type:         Simple
homepage:           https://github.com/dev-slabs/z-cbor
bug-reports:        https://github.com/dev-slabs/z-cbor/issues
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/dev-slabs/z-cbor.git

library
  exposed-modules:
    Z.Data.CBOR.Builder
    Z.Data.CBOR.Value

  build-depends:
      base                  >=4.12  && <5
    , containers            >=0.6   && <0.7
    , deepseq               >=1.4   && <1.5
    , hashable              >=1.3   && <1.4
    , integer-gmp           >=1     && <2
    , primitive             >=0.7.1 && <0.7.2
    , QuickCheck            >=2.10
    , scientific            >=0.3   && <0.4
    , tagged                >=0.8   && <0.9
    , time                  >=1.9   && <2.0
    , unordered-containers  >=0.2   && <0.3
    , Z-Data                >=0.8   && <0.9
    , Z-IO                  >=0.8   && <0.9

  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    CApiFFI
    CPP
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UnboxedTuples
    UnliftedFFITypes
    ViewPatterns

test-suite Z-CBOR-Test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test/
  build-depends:
      base
    , containers
    , hashable
    , hspec                 >=2.5.4
    , HUnit
    , primitive
    , QuickCheck            >=2.10
    , quickcheck-instances
    , scientific
    , time
    , unordered-containers
    , Z-Data
    , Z-IO
    , Z-CBOR

  other-modules:      Z.Data.CBOR.BaseSpec
  ghc-options:        -threaded
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover ==2.*